
 - (expected) clean-up of libusb API variants support [#300 and follow-ups]

 - (expected) CI automation for coding style

 - (expected) CI automation for driver flags and variables to be certainly
   documented, handled in augeas lenses, nutconf classes, etc.

 - (expected) CI automation for use of data points in drivers that conform
   to patterns defined in link:docs/nut-names.txt[]


Release notes for NUT 2.8.4 - what's new since 2.8.3
----------------------------------------------------

 - Bug fixes for fallout possible due to "fightwarn" effort in 2.8.0+:
   * In `usbhid-ups` sources, introduced optional `HU_FLAG_PARAM_REQUIRED` for
     `setvar()` or `instcmd()` handling (and a `HU_TYPE_CMD_PARAM_REQUIRED`
     shortcut) for setting in the mapping table flags, to specify variables
     or instant commands that require an argument (either from caller or a
     non-`NULL` default in the run-time table after device data discovery);
     if the flag is not set, a zero value is assumed. Incomplete code was a
     regression of NUT v2.8.3 causing some instant commands to fail. [#2860,
     #2955]

 - Fix fallout of development in NUT v2.8.0 and/or v2.8.1 and/or v2.8.2 and/or
   v2.8.3:
   * Fixed a regression in recipes of NUT v2.8.3 release (as compared to
     v2.8.2), where `configure --with-docs=all` no longer failed a run
     of the `configure` script when some of the required rendering tools
     were not in fact available. [#2842, fixed by #2921]
   * Some recipe improvements in earlier releases led to `make check` always
     running a spelling check (if tools are available), even if the explicit
     `configure --disable-spellcheck` option was used. Now it would not run
     if disabled (e.g. to speed up CI builds in scenarios that focus on other
     aspects of the code base), although developers can still use the explicit
     `make spellcheck*` goals, when tools are in fact available. [#2973]